--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>can life</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+		<!--[if lt IE 9]>
+			<script src="assets/js/html5shiv.js"></script>
+		<![endif]-->
 	</head>
 	<body>
 		<header>
